--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,90 +1,80 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>DeploymentCycle</title>
-  <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <nav class="top-bar" data-topbar role="navigation">
-    <ul class="title-area">
-      <li class="name">
-        <h2><a href="/">Park Perks</a></h2>
-      </li>
-       <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-      <!-- <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li> -->
-    </ul>
+    <title><%= content_for?(:title) ? yield(:title) : "Deployment Diagram" %></title>
 
-    <section class="top-bar-section">
-      <!-- Right Nav Section -->
-      <ul class="right">
-        <!-- <li><a href="#">Button</a></li> -->
+    <%= stylesheet_link_tag    "application" %>
+    <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+  </head>
 
+  <body>
+    <nav class="top-bar" data-topbar role="navigation">
+      <ul class="title-area">
 
-        <li class="has-dropdown">
-          <% if user_signed_in? %>
-            <a href="#">
-              <% unless current_user.profile_photo.nil? %>
-                <%= image_tag "#{current_user.profile_photo}", size: "30x30" %>
-              <% end %>
-              <%= current_user.email %>
-            </a>
-            <ul class="dropdown">
-              <li><%= link_to "My profile", user_path(current_user) %></li>
-              <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
-              <% if current_user.admin? %>
-              <li> <%= link_to "Admin", '#' %> </li>
-              <% end %>
-            </ul>
-          <% else %>
-          <a href="#">Account</a>
-            <ul class="dropdown">
-              <li><%= link_to 'Sign Up', new_user_registration_path  %></li>
-              <li><%= link_to 'Sign In', new_user_session_path %></li>
-            </ul>
-          <% end %>
-        </li>
+         <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+        <!-- <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li> -->
       </ul>
 
-      <!-- Left Nav Section -->
-      <ul class="left">
+      <section class="top-bar-section">
+        <!-- Right Nav Section -->
+        <ul class="right">
+          <!-- <li><a href="#">Button</a></li> -->
 
-        <li class="has-form">
-          <div class="row collapse">
-            <%= form_tag(root_path, method: 'get') do %>
-            <div class="large-8 small-9 columns">
-              <%= text_field_tag(:search) %>
-            </div>
-            <div class="large-4 small-3 columns">
-              <%= submit_tag "Search", :class => "button" %>
-            </div>
+
+          <li class="has-dropdown">
+            <% if user_signed_in? %>
+              <a href="#">
+                <% unless current_user.profile_photo.nil? %>
+                  <%= image_tag "#{current_user.profile_photo}", size: "30x30" %>
+                <% end %>
+                <%= current_user.email %>
+              </a>
+              <ul class="dropdown">
+                <li><%= link_to "My profile", user_path(current_user) %></li>
+                <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
+                <% if current_user.admin? %>
+                <li> <%= link_to "Admin", '#' %> </li>
+                <% end %>
+              </ul>
+            <% else %>
+            <a href="#">Account</a>
+              <ul class="dropdown">
+                <li><%= link_to 'Sign Up', new_user_registration_path  %></li>
+                <li><%= link_to 'Sign In', new_user_session_path %></li>
+              </ul>
             <% end %>
-          </div>
-        </li>
-      </ul>
+          </li>
+        </ul>
+
+        <!-- Left Nav Section -->
+        <ul class="left">
+          <h2><a href="/">Deployment Diagrams</a></h2>
+        </ul>
 
 
-    </section>
-  </nav>
+      </section>
+    </nav>
 
 
-  <div id="flash-div" class="text-center flash-alert">
-    <% flash.each do |key, value| %>
-      <div id='flash-messages' class="alert-box">
-        <% if value.class == Array %>
-          <% value.each do |val| %>
-            <%= val %><br>
+    <div id="flash-div" class="text-center flash-alert">
+      <% flash.each do |key, value| %>
+        <div id='flash-messages' class="alert-box">
+          <% if value.class == Array %>
+            <% value.each do |val| %>
+              <%= val %><br>
+            <% end %>
+          <% else %>
+            <%= value %>
           <% end %>
-        <% else %>
-          <%= value %>
-        <% end %>
-      </div>
-    <% end %>
-  </div>
+        </div>
+      <% end %>
+    </div>
 
-<%= yield %>
+  <%= yield %>
 
-</body>
-</html>
+  </body>
+  </html>
