--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,25 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+
+<div class="top">
+
+  <div class="timeline-and-logo">
+    <div class="row">
+
+
+      <div class="large-8 columns text-center">
+        <h1>Welcome#index</h1>
+        <div class="image-container">
+          <img class="timeline-image" src="https://dl.dropboxusercontent.com/u/18396109/Screen%20Shot%202016-01-16%20at%207.58.45%20PM.png">
+        </div>
+        <a href="#" class="button tiny">Sign Up</a>
+      </div>
+
+      <div class="large-4 columns text-center">
+        <h1>Deployment</h1>
+        <br>
+        <h2>Diagrams</h2>
+      </div>
+
+    </div>
+  </div>
+
+</div>
