--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,13 @@
  *= require foundation_and_overrides
 
  */
+
+ .top{
+   background-image: url(https://dl.dropboxusercontent.com/u/18396109/gray_background.jpg);
+   background-size: cover;
+ }
+
+ .pad-vert {
+    padding-top: 100px;
+    padding-bottom: 150px;
+}
