--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
           <li class="name">
-            <h2><a href="/">Park Perks</a></h2>
+            <h2><a href="/">Deployment Diagrams</a></h2>
           </li>
            <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
           <!-- <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li> -->
@@ -57,18 +57,6 @@
           <!-- Left Nav Section -->
           <ul class="left">
 
-            <li class="has-form">
-              <div class="row collapse">
-                <%= form_tag(root_path, method: 'get') do %>
-                <div class="large-8 small-9 columns">
-                  <%= text_field_tag(:search) %>
-                </div>
-                <div class="large-4 small-3 columns">
-                  <%= submit_tag "Search", :class => "button" %>
-                </div>
-                <% end %>
-              </div>
-            </li>
           </ul>
 
 
