--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,16 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+
+
+
+<div class="top pad-vert">
+  <div class="row">
+
+    <div class="columns small-6 medium-8 large-6">
+      <img class="timeline-img" src="https://dl.dropboxusercontent.com/u/18396109/Screen%20Shot%202016-01-16%20at%207.58.45%20PM.png">
+    </div>
+
+    <div class="columns small-6 medium-4 large-6">
+      <h2>Deployment</h2>
+      <h3>Diagrams</h3>
+    </div>
+  </div>
+</div>
