--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -2,3 +2,9 @@ $dark-green: #335650; // dark-green
 $light-green: #9eae8a; // light-green
 $light-brown: #cdbb93 ; //light-brown
 $pastel-orange: #fbc599; //  pastel-orange
+$pastel-grey: #9BAABA;
+$dark-grey: #6E6F71;
+$pastel-red: #F07464;
+$mustard-yellow: #F2C66D;
+$navy-blue: #495868;
+$teal-blue: #A0C2BB;
