--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,13 +1,48 @@
 <div class="top pad-vert">
-  <div class="row">
 
-    <div class="columns small-6 medium-8 large-6">
-      <img class="timeline-img" src="https://dl.dropboxusercontent.com/u/18396109/Screen%20Shot%202016-01-16%20at%207.58.45%20PM.png">
+<div class="row" data-equalizer>
+
+    <div class="columns small-6" data-equalizer-watch>
+      <div class="image-container">
+        <img class="timeline-img" src="https://dl.dropboxusercontent.com/u/18396109/Screen%20Shot%202016-01-16%20at%207.58.45%20PM.png">
+      </div>
+
+      <div class="text-center">
+        <br>
+        <a href="#" class="button tiny">Sign Up</a>
+      </div>
     </div>
 
-    <div class="columns small-6 medium-4 large-6">
+    <div class="columns small-6" data-equalizer-watch>
       <h2>Deployment</h2>
       <h3>Diagrams</h3>
     </div>
+
+    </div>
+</div>
+
+<div class="middle-section pad-vert">
+
+  <div class="row">
+    <div class="columns small-4">
+      <div class="panel box-background">
+
+        <p class="">View Events on Your Timeline</p>
+
+      </div>
+    </div>
+
+    <div class="columns small-4">
+      <div class="panel box-background">
+      <p class="">Add Notes to Events</p>
+      </div>
+    </div>
+
+    <div class="columns small-4">
+      <div class="panel box-background">
+      <p class="">Filter Events & Notes via Team Tags</p>
+      </div>
+    </div>
+
   </div>
 </div>
