--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,6 @@
   <body>
       <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
-          <li class="name">
-            <h2><a href="/">Deployment Diagrams</a></h2>
-          </li>
            <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
           <!-- <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li> -->
         </ul>
@@ -52,11 +49,6 @@
             </li>
           </ul>
 
-          <!-- Left Nav Section -->
-          <ul class="left">
-
-          </ul>
-
         <!-- Left Nav Section -->
         <ul class="left">
           <h2><a href="/">Deployment Diagrams</a></h2>
@@ -82,6 +74,17 @@
     </div>
 
   <%= yield %>
+
+  <div class="footer">
+      <!-- <div class="leaf">
+      </div> -->
+      <div class="row">
+        <div class="small-12 columns">
+          <h4 class="slogan">Deployment Diagrams</h4>
+          <p class="copywrite">Copyright not copypwritten © mrlevitas 2016</p>
+        </div>
+      </div>
+    </div>
 
   </body>
   </html>
