got rid of images, test pass:

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,7 @@
 
       <div class="text-center">
         <br>
-        <a href="#" class="button tiny">Sign Up</a>
+        <a href="#" class="button tiny">Join</a>
       </div>
     </div>
 
