--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,7 +37,7 @@
     padding-bottom: 50px;
 }
 
-.box-background{
+.box-background {
   background-color: $pastel-grey;
 }
 
@@ -54,21 +54,21 @@
 //   width: 50%;
 //   // @include vertical-align;
 // }
- .top{
-   background: url(https://dl.dropboxusercontent.com/u/18396109/gray_background.jpg) no-repeat center center;
+ .top {
+   background: url("https://dl.dropboxusercontent.com/u/18396109/gray_background.jpg") no-repeat center center;
    -moz-background-size:100% 100%;
  -webkit-background-size:100% 100%;
  background-size: cover;
 
 
-   .logo-right{
+   .logo-right {
      display: inline-block;
      vertical-align: middle;
      width: 50%;
     //  @include vertical-align;
   }
 
-  .time-butt{
+  .time-butt {
     display: inline-block;
     vertical-align: middle;
     width: 50%;
@@ -86,19 +86,19 @@
 
 
 
-.image-container{
+.image-container {
   display: inline-block;
   vertical-align: middle;
   width: 50%;
 }
 
-.timeline-image{
+.timeline-image {
   width:100%;
   max-height:100%;
   object-fit: contain;
 }
 
-.content{
+.content {
 
 
 }
@@ -295,7 +295,7 @@
  }
 
  .footer {
-   background-color:  $secondary-color;
+   background-color: $secondary-color;
    font-family: $font-stack;
    font-size: 1.2rem;
    padding: 2rem;
