--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,11 @@
 
       <div class="text-center">
         <br>
-        <a href="#" class="button tiny">Join</a>
+        <% if user_signed_in? %>
+          <a href="/timelines" class="button tiny">My Timelines</a>
+        <% else %>
+          <a href="<%= new_user_registration_path%>" class="button tiny">Join</a>
+        <% end %>
       </div>
     </div>
 
