--- a/app/views/timelines/show.html.erb
+++ b/app/views/timelines/show.html.erb
@@ -2,4 +2,12 @@
 
   <h1><%= @timeline.title%></h1>
   <h3 class=""><%= @timeline.description %></h3>
+
+  <div class="button tiny update-butt">
+    <%= link_to 'Update', edit_timeline_path(@timeline) %>
+  </div>
+
+  <div class="button tiny update-butt">
+  <%= link_to 'Delete', timeline_path(@timeline), method: "delete", class: "button tiny update-butt" %>
+  </div>
 </div>
