join table working, 1 test

--- a/app/views/timelines/index.html.erb
+++ b/app/views/timelines/index.html.erb
@@ -3,3 +3,7 @@
 
 <h4>Timelines</h4>
 <a href="<%= new_timeline_path %>" >New Timeline</a>
+
+<ul class="small-10 small-centered column">
+  <%= render @timelines %>
+</ul>
