update events works

--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,7 +1,6 @@
-<h2>Create New Event</h2>
+<h1 class="review-title">Edit Timeline</h1>
 
 <div class="small-8 small-centered column text-center">
-
   <%= form_for [@timeline, @event] do |f| %>
     <div class="review-form-list">
       <%=f.label :title, "Title"%>
