--- a/app/views/timelines/show.html.erb
+++ b/app/views/timelines/show.html.erb
@@ -46,17 +46,14 @@
 
 <div class="row">
  <div id="timeline1" style="width:500px;"></div>
- <h2>Timeline Title?</h2>
- <div id="timelineNonDate" style="width:500px;"></div>
- 
+  <div id="expand-event"></div>
+  <div id="timelineNonDate" style="width:500px;"></div>
 </div>
 
 
 <script type="text/javascript">
   var events_stuff = gon.events
-  debugger;
   //  [{ id: "1", "name": "Deploy asap", "description": "jaklsdjf", "date": "2012-09-28T17:16:00"}]
 
-  debugger;
   TimeKnots.draw("#timelineNonDate", events_stuff,  {dateFormat: "%B %Y", color: "#696", width:500, showLabels: true, labelFormat: "%Y"});
 </script>
