changed labels, post-its, color

--- a/app/views/timelines/show.html.erb
+++ b/app/views/timelines/show.html.erb
@@ -44,10 +44,12 @@
   </div>
 </div>
 
-<div class="row">
- <div id="timeline1" style="width:500px;"></div>
+
+
+<div class="row text-center">
+ <div id="timeline1" style="width:1000px;"></div>
   <div id="expand-event"></div>
-  <div id="timelineNonDate" style="width:500px;"></div>
+  <div id="timelineNonDate" style="width:800px;"></div>
 </div>
 
 
@@ -55,5 +57,5 @@
   var events_stuff = gon.events
   //  [{ id: "1", "name": "Deploy asap", "description": "jaklsdjf", "date": "2012-09-28T17:16:00"}]
 
-  TimeKnots.draw("#timelineNonDate", events_stuff,  {dateFormat: "%B %Y", color: "#696", width:500, showLabels: true, labelFormat: "%Y"});
+  TimeKnots.draw("#timelineNonDate", events_stuff,  {color: "#F2C66D", width:1000, showLabels: true});
 </script>
