--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,7 +30,18 @@
  //   -ms-transform: translateY(-50%);
  //   transform: translateY(-50%);
  // }
+ .post-it {
+ background:#fefabc;
+ padding:15px;
+ font-size:15px;
+ color: #000;
+ width:400px;
 
+ box-shadow: 0px 4px 6px #333;
+ -moz-box-shadow: 0px 4px 6px #333;
+ -webkit-box-shadow: 0px 4px 6px #333;
+
+ }
 
  .pad-vert {
     padding-top: 50px;
