--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,6 +43,11 @@
 
  }
 
+ .floaty-right {
+    float: right;
+    margin: 0 0 10px 10px;
+}
+
  .pad-vert {
     padding-top: 50px;
     padding-bottom: 50px;
