--- a/app/views/timelines/show.html.erb
+++ b/app/views/timelines/show.html.erb
@@ -30,19 +30,19 @@
 
   <div class="small-3 columns right">
 
-    <div class="button tiny update-butt">
-      <%= link_to 'Share with Users', new_membership_path(timeline_id: @timeline.id) %>
+    <div>
+      <%= link_to 'Share with Users', new_membership_path(timeline_id: @timeline.id), class: "button tiny update-butt" %>
     </div>
 
-    <div class="button tiny update-butt">
-      <%= link_to 'Join', memberships_path(timeline_id: @timeline.id, add_user: false), method: "post" %>
+    <div>
+      <%= link_to 'Join', memberships_path(timeline_id: @timeline.id, add_user: false), method: "post", class: "button tiny update-butt" %>
     </div>
 
-    <div class="button tiny update-butt">
-      <%= link_to 'Update', edit_timeline_path(@timeline) %>
+    <div>
+      <%= link_to 'Update', edit_timeline_path(@timeline), class: "button tiny update-butt" %>
     </div>
 
-    <div class="button tiny update-butt">
+    <div>
     <%= link_to 'Delete', timeline_path(@timeline), method: "delete", class: "button tiny update-butt" %>
     </div>
   </div>
@@ -52,10 +52,26 @@
 
 <div class="row clearfix">
   <div id="timelineNonDate" style="width:6 00px;"></div>
-  <div class="button tiny update-butt">
-    <%= link_to 'Add Event', new_timeline_event_path(@timeline) %>
+  <div class="row">
+    <div class="large-4 columns">
+      <p>
+
+      </p>
+    </div>
+    <div class="large-4 columns text-center">
+      <div>
+        <%= link_to 'Add Event', new_timeline_event_path(@timeline), class: "button tiny update-butt" %>
+      </div>
+    </div>
+    <div class="large-4 columns">
+      <p>
+
+      </p>
+    </div>
+
   </div>
 </div>
+
 
 
 <script type="text/javascript">
