--- a/app/views/timelines/show.html.erb
+++ b/app/views/timelines/show.html.erb
@@ -22,9 +22,17 @@
        <% end%>
     </p>
   </div>
-  <div class="small-6 columns center">
+  <div class="small-6 columns center pad-vert">
     <!-- <div id="timeline1" style="width:600px;"></div> -->
-    <div id="expand-event"></div>
+    <div id="expand-event">
+      <div class="post-it-placeholder">
+        <p>
+
+        </p>
+      </div>
+    </div>
+
+
   </div>
 
 
