--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,6 +30,27 @@
  //   -ms-transform: translateY(-50%);
  //   transform: translateY(-50%);
  // }
+
+ .green-completion{
+  color: white;
+  width: 85px;
+  background-color: green;
+  margin: 5px 5px 5px 5px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgba(0,0,0,.2);
+ }
+
+.red-completion {
+  color: white;
+  width: 45px;
+  background-color: red;
+  margin: 5px 5px 5px 5px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgba(0,0,0,.2);
+ }
+
  .post-it {
  background:#fefabc;
  padding:15px;
@@ -40,6 +61,14 @@
  box-shadow: 0px 4px 6px #333;
  -moz-box-shadow: 0px 4px 6px #333;
  -webkit-box-shadow: 0px 4px 6px #333;
+
+ }
+
+ .post-it-placeholder {
+ background: $dark-grey;
+ padding:15px;
+ font-size:15px;
+ width:400px;
 
  }
 
