--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -18,9 +18,10 @@
     </ul>
 
     <div class="review-form-list">
-          <%=f.label :completed, "Completed?"%><%= f.check_box :completed %>
+          <%=f.label :completed, "Completed?"%>
+          <%= f.check_box :completed, {}, true, false %>
     </div>
-
+    
     <div class="review-form-list no-bullet">
       <%= f.submit class: "button tiny"%>
     </div>
