--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,5 @@
 <div class="top pad-vert">
-
-<div class="row" data-equalizer>
-
+  <div class="row" data-equalizer>
     <div class="columns small-6" data-equalizer-watch>
       <div class="image-container">
         <img class="timeline-img" src="https://dl.dropboxusercontent.com/u/18396109/Screen%20Shot%202016-01-16%20at%207.58.45%20PM.png">
@@ -22,8 +20,20 @@
       <h3>Diagrams</h3>
     </div>
 
-    </div>
+  </div>
 </div>
+
+<div class="row text-center">
+  <p>
+    <br>
+    View, Share, and Create timelines.
+    <br>
+    Coordinate a product's release around ‘events’.
+    <br>
+    Filter events by tags (i.e. Dev, Test, Q/A, Release) to view events pertinent to your role.
+  </p>
+</div>
+
 
 <div class="middle-section pad-vert">
 
@@ -38,7 +48,7 @@
 
     <div class="columns small-4">
       <div class="panel box-background">
-      <p class="">Add Notes to Events</p>
+      <p class="">Share and Join other user's Timelines</p>
       </div>
     </div>
 
@@ -49,4 +59,12 @@
     </div>
 
   </div>
+</div>
+
+<div class="row text-center">
+  <p>
+    <div>
+      <%= link_to "Demo", welcome_path(1), class: "button tiny" %><br>
+    </div>
+  </p>
 </div>
