--- a/app/views/welcome/show.html.erb
+++ b/app/views/welcome/show.html.erb
@@ -1,13 +1,11 @@
 
+
 <ul>
-  <% @shared_users.each do |usr| %>
-      <% if usr != current_user %>
-    <li>
-      Users shared with: <%= usr.email%>
+    <li class="no-bullet">
+
     </li>
-    <%end%>
-  <%end%>
 </ul>
+
 
 
 <div class="row clearfix">
@@ -30,24 +28,27 @@
         </p>
       </div>
     </div>
+
+
   </div>
 
 
   <div class="small-3 columns right">
+    <h4>Timeline Options:</h4>
     <div>
-      <%= link_to 'Share with Users', new_membership_path(timeline_id: @timeline.id), class: "button tiny update-butt" %>
+      <a href="#" class="button tiny update-butt">Share with Users</a>
     </div>
 
     <div>
-      <%= link_to 'Join', memberships_path(timeline_id: @timeline.id, add_user: false), method: "post", class: "button tiny update-butt" %>
+      <a href="#" class="button tiny update-butt">Join</a>
     </div>
 
     <div>
-      <%= link_to 'Update', edit_timeline_path(@timeline), class: "button tiny update-butt" %>
+      <a href="#" class="button tiny update-butt">Update</a>
     </div>
 
     <div>
-    <%= link_to 'Delete', timeline_path(@timeline), method: "delete", class: "button tiny update-butt" %>
+      <a href="#" class="button tiny update-butt">Delete</a>
     </div>
   </div>
 </div>
@@ -80,7 +81,6 @@
 
 <script type="text/javascript">
   var events_stuff = gon.events
-  //  [{ id: "1", "name": "Deploy asap", "description": "jaklsdjf", "date": "2012-09-28T17:16:00"}]
 
   TimeKnots.draw("#timelineNonDate", events_stuff,  {color: "#F2C66D", width:1000, showLabels: true});
 </script>
