--- a/app/views/timelines/show.html.erb
+++ b/app/views/timelines/show.html.erb
@@ -39,7 +39,7 @@
     </div>
 
     <div>
-      <%= link_to 'Join', memberships_path(timeline_id: @timeline.id, add_user: false), method: "post", class: "button tiny update-butt" %>
+      <%= link_to 'Join Timeline', memberships_path(timeline_id: @timeline.id, add_user: false), method: "post", class: "button tiny update-butt" %>
     </div>
 
     <div>
