--- a/app/views/welcome/show.html.erb
+++ b/app/views/welcome/show.html.erb
@@ -33,7 +33,7 @@
     </div>
 
     <div>
-      <a href="#" class="button tiny update-butt">Join</a>
+      <a href="#" class="button tiny update-butt">Join Timeline</a>
     </div>
 
     <div>
