--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -139,28 +139,16 @@
   width: 50%;
 }
 
-.image-container-share {
-  display: inline-block;
-  width: 50%;
-  height: 25%;
-}
-
-.image-container-share-right {
-  display: inline-block;
-  text-align: right;
-  width: 50%;
-  height: 25%;
-}
+// .image-container-share {
+//   display: inline-block;
+//   width: 50%;
+//   height: 25%;
+// }
 
 .timeline-image {
   width:100%;
   max-height:100%;
   object-fit: contain;
-}
-
-.content {
-
-
 }
 
  $font-stack: 'Mako', sans-serif;
