filter working for realll, even on demo page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -69,6 +69,8 @@
     <div class="columns small-4 full-height" data-equalizer-watch>
       <div class="panel box-background sidebar">
       <p class="">Filter Events & Notes via Team Tags</p>
+      <img class="timeline-img" src="https://dl.dropboxusercontent.com/u/18396109/Screen%20Shot%202016-01-26%20at%2012.08.58%20PM.png">
+
       </div>
     </div>
 
