--- a/app/views/timelines/show.html.erb
+++ b/app/views/timelines/show.html.erb
@@ -50,6 +50,7 @@
     <%= link_to 'Delete', timeline_path(@timeline), method: "delete", class: "button tiny update-butt" %>
     </div>
     <div>
+      <h5>Filter Events by Team Tag:</h5>
       <%= select_tag 'team_tag', options_for_select([["none", "none"], ["Dev", "dev"], ["Test", "test"], ["Q/A", "qa"], ["Release", "release"], ["R&D", "rd"]]), onchange: "filterTag(this)"  %>
     </div>
 
@@ -59,7 +60,7 @@
 
 
 <div class="row clearfix">
-  <div id="timelineNonDate" style="width:6 00px;"></div>
+  <div id="timelineNonDate" style="width: 600px;"></div>
   <div class="row">
     <div class="large-4 columns">
       <p>
