--- a/app/views/welcome/show.html.erb
+++ b/app/views/welcome/show.html.erb
@@ -43,13 +43,19 @@
     <div>
       <a href="#" class="button tiny update-butt">Delete</a>
     </div>
+
+    <div>
+      <h5>Filter Events by Team Tag:</h5>
+      <%= select_tag 'team_tag', options_for_select([["none", "none"], ["Dev", "dev"], ["Test", "test"], ["Q/A", "qa"], ["Release", "release"], ["R&D", "rd"]]), onchange: "filterTag(this)"  %>
+    </div>
+
   </div>
 </div>
 
 
 
 <div class="row clearfix">
-  <div id="timelineNonDate" style="width:6 00px;"></div>
+  <div id="timelineNonDate"></div>
   <div class="row">
     <div class="large-4 columns">
       <p>
