--- a/app/views/timelines/new.html.erb
+++ b/app/views/timelines/new.html.erb
@@ -1,3 +1,8 @@
 <h2>Create New Timeline</h2>
 
-<%= render "timelines/form" %>
+<div class="row">
+  <div class="jumbotran">
+    <%= render "timelines/form" %>
+  </div>
+  <br>
+</div>
