--- a/app/views/timelines/show.html.erb
+++ b/app/views/timelines/show.html.erb
@@ -22,7 +22,7 @@
        <% end%>
     </p>
   </div>
-  <div class="small-6 columns center pad-vert">
+  <div class="small-6 columns center">
     <div id="expand-event">
       <div class="post-it-placeholder">
         <p>
