--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,51 +1,58 @@
-<div class="review-title small-8 small-centered column text-center">
+<div class="row">
+    <div class="jumbotran">
 
-  <h2 class="review-title">Edit <%= resource_name.to_s.humanize %></h2>
+  <div class="review-title small-8 small-centered column text-center">
 
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-    <%= devise_error_messages! %>
+    <h2 class="review-title">Edit <%= resource_name.to_s.humanize %></h2>
 
-    <div class="review-form-list">
-      <%= f.label :first_name, "First Name" %><br />
-      <%= f.text_field :first_name, autofocus: true %>
-    </div>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= devise_error_messages! %>
 
-    <div class="review-form-list">
-      <%= f.label :last_name, "Last Name" %><br />
-      <%= f.text_field :last_name%>
-    </div>
+      <div class="review-form-list">
+        <%= f.label :first_name, "First Name" %><br />
+        <%= f.text_field :first_name, autofocus: true %>
+      </div>
 
-    <div class="review-form-list">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true %>
-    </div>
+      <div class="review-form-list">
+        <%= f.label :last_name, "Last Name" %><br />
+        <%= f.text_field :last_name%>
+      </div>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+      <div class="review-form-list">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true %>
+      </div>
+
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+      <% end %>
+
+      <div class="review-form-list">
+        <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+        <%= f.password_field :password, autocomplete: "on" %>
+      </div>
+
+      <div class="review-form-list">
+        <%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "on" %>
+      </div>
+
+      <div class="review-form-list text-center">
+        <%= f.label :profile_photo, 'Profile Photo:'%>
+        <%= f.file_field :profile_photo %>
+      </div>
+
+      <div class="actions">
+        <%= f.submit "Update", class: "button tiny"%>
+      </div>
     <% end %>
 
-    <div class="review-form-list">
-      <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-      <%= f.password_field :password, autocomplete: "on" %>
-    </div>
+    <hr>
 
-    <div class="review-form-list">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "on" %>
-    </div>
+    <p><%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "button tiny"%></p>
 
-    <div class="review-form-list text-center">
-      <%= f.label :profile_photo, 'Profile Photo:'%>
-      <%= f.file_field :profile_photo %>
-    </div>
+  </div>
 
-    <div class="actions">
-      <%= f.submit "Update", class: "button tiny"%>
-    </div>
-  <% end %>
-
-  <hr>
-
-  <p><%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "button tiny"%></p>
-
+</div>
+<br>
 </div>
