--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,27 +1,30 @@
-<div class="top pad-vert">
-  <div class="row" data-equalizer>
-    <div class="columns small-6" data-equalizer-watch>
-      <div class="image-container">
-        <img class="timeline-img" src="https://dl.dropboxusercontent.com/u/18396109/Screen%20Shot%202016-01-16%20at%207.58.45%20PM.png">
+
+
+    <div class="row" data-equalizer>
+  <div class="top">
+      <div class="columns small-6" data-equalizer-watch>
+        <div class="image-container">
+          <img class="timeline-img" src="https://dl.dropboxusercontent.com/u/18396109/Screen%20Shot%202016-01-16%20at%207.58.45%20PM.png">
+        </div>
+
+        <div class="text-center">
+          <br>
+          <% if user_signed_in? %>
+            <a href="/timelines" class="button hollow">My Timelines</a>
+          <% else %>
+            <div>
+              <%= link_to "Demo", welcome_path(1), class: "button hollow" %><br>
+            </div>
+          <% end %>
+        </div>
       </div>
 
-      <div class="text-center">
-        <br>
-        <% if user_signed_in? %>
-          <a href="/timelines" class="button hollow">My Timelines</a>
-        <% else %>
-          <div>
-            <%= link_to "Demo", welcome_path(1), class: "button hollow" %><br>
-          </div>
-        <% end %>
+      <div class="columns small-6" data-equalizer-watch>
+        <h2 style="color: #F2C66D">Deployment</h2>
+        <h3 style="color: #F2C66D">Diagrams</h3>
       </div>
-    </div>
 
-    <div class="columns small-6" data-equalizer-watch>
-      <h2>Deployment</h2>
-      <h3>Diagrams</h3>
     </div>
-
   </div>
 </div>
 
