--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -8,3 +8,5 @@ $pastel-red: #F07464;
 $mustard-yellow: #F2C66D;
 $navy-blue: #495868;
 $teal-blue: #A0C2BB;
+$hue-orange: #B56100;
+$light-grey: #BCBDC1;
