--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,9 +53,9 @@
         <!-- Left Nav Section -->
         <ul class="left">
           <% if user_signed_in? %>
-            <h2><a href="/timelines">Deployment Diagrams</a></h2>
+            <h2 style="padding-left: 15px;"><a href="/timelines">Deployment Diagrams</a></h2>
           <%else%>
-            <h2><a href="/">Deployment Diagrams</a></h2>
+            <h2 style="padding-left: 15px;"><a href="/">Deployment Diagrams</a></h2>
           <%end%>
         </ul>
 
