--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,19 +1,27 @@
+<div class="background-cold">
 
-
-    <div class="row" data-equalizer>
-  <div class="top">
+  <div class="row" data-equalizer>
+    <div class="top">
       <div class="columns small-6" data-equalizer-watch>
-        <div class="image-container">
-          <img class="timeline-img" src="https://dl.dropboxusercontent.com/u/18396109/Screen%20Shot%202016-01-16%20at%207.58.45%20PM.png">
-        </div>
+
 
         <div class="text-center">
+          <div class="image-container">
+            <img class="timeline-img" src="https://dl.dropboxusercontent.com/u/18396109/Screen%20Shot%202016-01-16%20at%207.58.45%20PM.png">
+          </div>
           <br>
+          <br>
+
+
           <% if user_signed_in? %>
-            <a href="/timelines" class="button hollow">My Timelines</a>
+            <a href="/timelines" class="ghost-button-thick-border">My Timelines</a>
           <% else %>
             <div>
-              <%= link_to "Demo", welcome_path(1), class: "button hollow" %><br>
+              <a href="<%= new_user_registration_path%>" class="ghost-button-thick-border">Join</a>
+            </div>
+            not sure? try the demo below
+            <div>
+              <%= link_to "Demo", welcome_path(1), class: "ghost-button-thick-border" %><br>
             </div>
           <% end %>
         </div>
@@ -26,62 +34,61 @@
 
     </div>
   </div>
-</div>
 
-<div class="row text-center">
-  <p>
-    <br>
-    View, Share, and Create timelines.
-    <br>
-    Coordinate a product's release around ‘events’.
-    <br>
-    Filter events by tags (i.e. Dev, Test, Q/A, Release) to view events pertinent to your role.
-  </p>
-</div>
+  <div class="row text-center">
+    <p>
+      <br>
+      View, Share, and Create timelines.
+      <br>
+      Coordinate a product's development or release around ‘events’.
+      <br>
+      Filter events by tags (i.e. Dev, Test, Q/A, Release) to view events pertinent to your role.
+    </p>
+  </div>
 
 
-<div class="middle-section pad-vert">
+  <div class="middle-section pad-vert">
 
-  <div class="row" data-equalizer>
-    <div class="columns small-4 full-height" data-equalizer-watch>
-      <div class="panel box-background sidebar">
+    <div class="row" data-equalizer>
+      <div class="columns small-4 full-height" data-equalizer-watch>
+        <div class="panel box-background sidebar">
 
-        <p class="">View Events on Your Timeline</p>
+          <p class="">View Events on Your team's Timeline.</p>
+          <!-- <br>
+          <p>Mark them complete & tag teams. </p> -->
 
-        <img class="timeline-img" src="https://dl.dropboxusercontent.com/u/18396109/timeline_ex.png">
+          <img class="timeline-img" src="https://dl.dropboxusercontent.com/u/18396109/timeline_ex.png">
+        </div>
       </div>
-    </div>
 
-    <div class="columns small-4 full-height" data-equalizer-watch>
-      <div class="panel box-background sidebar">
-        <p class="">Share and Join other user's Timelines</p>
-        <div class="row">
-          <br>
-          <br>
-          <div class="small-6 columns">
-            <img class="timeline-img" src="https://dl.dropboxusercontent.com/u/18396109/share_with_users.png">
-          </div>
+      <div class="columns small-4 full-height" data-equalizer-watch>
+        <div class="panel box-background sidebar">
+          <p class="">Share and Join other user's Timelines</p>
+          <div class="row">
+            <br>
+            <br>
+            <div class="small-6 columns">
+              <img class="timeline-img" src="https://dl.dropboxusercontent.com/u/18396109/share_with_users.png">
+            </div>
 
-          <div class="small-6 columns">
-            <img class="timeline-img" src="https://dl.dropboxusercontent.com/u/18396109/join_timeline.png">
+            <div class="small-6 columns">
+              <img class="timeline-img" src="https://dl.dropboxusercontent.com/u/18396109/join_timeline.png">
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="columns small-4 full-height" data-equalizer-watch>
-      <div class="panel box-background sidebar">
-      <p class="">Filter Events & Notes via Team Tags</p>
-      <img class="timeline-img" src="https://dl.dropboxusercontent.com/u/18396109/Screen%20Shot%202016-01-26%20at%2012.08.58%20PM.png">
+      <div class="columns small-4 full-height" data-equalizer-watch>
+        <div class="panel box-background sidebar">
+        <p class="">Filter Events & Notes via Team Tags</p>
+        <img class="timeline-img" src="https://dl.dropboxusercontent.com/u/18396109/Screen%20Shot%202016-01-26%20at%2012.08.58%20PM.png">
 
+        </div>
       </div>
+
     </div>
-
   </div>
-</div>
 
-<div class="row text-center">
-  <p>
-    <a href="<%= new_user_registration_path%>" class="button hollow">Join</a>
-  </p>
+
+
 </div>
