--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,11 @@
 @import url(https://fonts.googleapis.com/css?family=Lora);
 @import url(https://fonts.googleapis.com/css?family=Merriweather);
 
+$primary-background-color: $pastel-orange; //  pastel-orange
+$secondary-background-color: $light-green; // light-green
+// in overrides
+$primary-color: #d3d3d3;
+$secondary-color: $navy-blue; //dark-green
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -101,8 +106,8 @@
 }
 
  .dev-tag{
+  display: inline-block;
   color: black;
-  width: 30px;
   background-color: #A80874;
   margin: 5px 5px 5px 5px;
   border-width: 1px;
@@ -112,7 +117,7 @@
 
  .test-tag{
   color: black;
-  width: 32px;
+  display: inline-block;
   background-color: #B7FDFE;
   margin: 5px 5px 5px 5px;
   border-width: 1px;
@@ -122,7 +127,7 @@
 
  .qa-tag{
   color: black;
-  width: 30px;
+  display: inline-block;
   background-color: #2B9720;
   margin: 5px 5px 5px 5px;
   border-width: 1px;
@@ -132,7 +137,7 @@
 
  .release-tag{
   color: black;
-  width: 55px;
+  display: inline-block;
   background-color: #AB3A1A;
   margin: 5px 5px 5px 5px;
   border-width: 1px;
@@ -142,7 +147,7 @@
 
  .rd-tag{
   color: black;
-  width: 35px;
+  display: inline-block;
   background-color: #779B71;
   margin: 5px 5px 5px 5px;
   border-width: 1px;
@@ -153,7 +158,7 @@
 
  .green-completion{
   color: white;
-  width: 85px;
+  display: inline-block;
   background-color: green;
   margin: 5px 5px 5px 5px;
   border-width: 1px;
@@ -163,7 +168,7 @@
 
 .red-completion {
   color: white;
-  width: 50px;
+  display: inline-block;
   background-color: red;
   margin: 5px 5px 5px 5px;
   border-width: 1px;
@@ -190,7 +195,7 @@
  }
 
  .post-it-placeholder {
- background: white;
+ background: $primary-color;
  padding:15px;
  font-size:15px;
  width:400px;
@@ -268,12 +273,6 @@ $font-stack: 'Merriweather', serif;
    margin-bottom: 0rem;
    margin-top: 0.5rem;
  }
-
- $primary-background-color: $pastel-orange; //  pastel-orange
- $secondary-background-color: $light-green; // light-green
- // in overrides
- $primary-color: #d3d3d3;
- $secondary-color: $navy-blue; //dark-green
 
  // Styles
  body {
