update dropbox links

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,7 +7,7 @@
 
         <div class="text-center">
           <div class="image-container">
-            <img class="timeline-img" src="https://dl.dropboxusercontent.com/u/18396109/Screen%20Shot%202016-01-16%20at%207.58.45%20PM.png">
+            <img class="timeline-img" src="https://www.dropbox.com/s/4m2tuljjeqwjtjz/Screen%20Shot%202016-01-16%20at%207.58.45%20PM.png">
           </div>
           <br>
           <br>
@@ -57,7 +57,7 @@
           <!-- <br>
           <p>Mark them complete & tag teams. </p> -->
 
-          <img class="timeline-img" src="https://dl.dropboxusercontent.com/u/18396109/timeline_ex.png">
+          <img class="timeline-img" src="https://www.dropbox.com/s/b0anlu82l4szpa9/timeline_ex.png">
         </div>
       </div>
 
@@ -68,11 +68,11 @@
             <br>
             <br>
             <div class="small-6 columns">
-              <img class="timeline-img" src="https://dl.dropboxusercontent.com/u/18396109/share_with_users.png">
+              <img class="timeline-img" src="https://www.dropbox.com/s/yy489igzqn33fqt/share_with_users.png">
             </div>
 
             <div class="small-6 columns">
-              <img class="timeline-img" src="https://dl.dropboxusercontent.com/u/18396109/join_timeline.png">
+              <img class="timeline-img" src="https://www.dropbox.com/s/tt1zudji3vtgn7k/join_timeline.png">
             </div>
           </div>
         </div>
@@ -81,7 +81,7 @@
       <div class="columns small-4 full-height" data-equalizer-watch>
         <div class="panel box-background sidebar">
         <p class="">Filter Events & Notes via Team Tags</p>
-        <img class="timeline-img" src="https://dl.dropboxusercontent.com/u/18396109/Screen%20Shot%202016-01-26%20at%2012.08.58%20PM.png">
+        <img class="timeline-img" src="https://www.dropbox.com/s/y6vg04b0adsjw8w/Screen%20Shot%202016-01-26%20at%2012.08.58%20PM.png">
 
         </div>
       </div>
