--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,7 +57,7 @@ $secondary-color: $navy-blue; //dark-green
 }
 
 .top {
-  background: url("https://dl.dropboxusercontent.com/u/18396109/gray_background.jpg") no-repeat center center;
+  background: url("https://www.dropbox.com/s/i0r78n65ge7iysc/gray_background.jpg") no-repeat center center;
   -moz-background-size:100% 100%;
   -webkit-background-size:100% 100%;
   position: relative;
